--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>p5 Starter Template - DAT443</title>
-</head>
 
-<body>
-    <div>
-        <h1>My P5 Sketch</h1>
-        <div id='p5container'></div>
-    </div>
-    <script src="js/p5.min.js"></script>
-    <script src="js/sketch.js"></script>
-</body>
+    <title>Sketch</title>
 
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+   <!-- include A-Frame -->
+<script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+<!-- include ar.js for A-Frame -->
+<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+
+
+
+  <body>
+   <a-scene embedded arjs> 
+    
+    <a-box position='0 0.5,0' materials='opacity: 0.2;' rotation="0 45 0" color="#4CC3D9"></a-box>
+    <a-cylinder position='2 0.9,0' materials='opacity: 0.2;' color="#59000E"></a-cylinder>
+    <a-sphere position='2 4,0' materials='opacity: 0.2;' ></a-sphere>
+    <a-plane position="0 0.5 0" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+    <a-sky color="#ECECEC"></a-sky>
+
+    <a-marker-camera preset='hiro'></a-marker-camera>
+</a-scene>
+
+  </body>
 </html>
